code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__browser_session_skips_foreign_background_events.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+
   - 运行命令


 › Keep browsing while checking status

 » Command guard: Leading cd /tmp/work is redundant

   +- Browser (headless): example.com
   |
   |   Actions
   |    MM:SS  Opened  https://example.com
   |
   |   Console: Encountering captcha challenge on checkout
   |
   +- [Ctrl+B] View · [Esc] Stop

 +----------------------------- ✶ 浏览中... -----------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
