code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_after_delta.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+
 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令


 ✶ 📁 /workspace  2 changes
    main

 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
