code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_expanded_deltas.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+
   - 运行命令


 ✶ 📁 /workspace/subdir  3 changes
    main  🧠 high
   Recent changes:
   • reasoning: medium → high  #3
   • branch: feature/context-ui → main  #2
   • cwd: /workspace → /workspace/subdir  #2

 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
