code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__empty_chat.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+


 ★   /code - perform a coding task (multiple agents)


 • 你好！今天我能帮你做些什么？



 • 我可以帮你处理多种任务，包括：

   - 写代码
   - 读取文件
   - 运行命令


 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
