code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__scroll_spacing_scrolled_intact.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: scrolled
---
 +----------------------------------------------------------------------------+
 |        Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui       |
 +----------------------------------------------------------------------------+
 •
   Here is another paragraph to expand height.

   Yet another paragraph for good measure.

 › Third user prompt to push history further.

   Assistant reply number three, still going strong.
 •
   - Bullet one
   - Bullet two
   - Bullet three

 › Fourth user prompt to guarantee overflow beyond the viewport height.


 +----------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                     |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change) Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
