code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: closed
---
 +------------------------------------------------------------------------------------------------+
 |                  Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui                 |
 +------------------------------------------------------------------------------------------------+
 +设置 ▸ 概览-------------------------------------------------------------------------------------+
 |                                                                                                |
 | › 模型                 模型: GPT-5.2-Codex (中)                                                |
 |   + 选择新对话使用的语言模型。                                                                 |
 |                                                                                                |
 |   主题                 主题: 浅色 - Photon（16 色） · 指示器: Diamond                          |
 |   + 切换预设配色并调整对比度。                                                                 |
 |                                                                                                |
 |   更新                 自动更新: 已禁用                                                        |
 |   + 控制 CLI 自动更新频率与发布通道。                                                          |
 |                                                                                                |
 |                                                                                                |

 |   账户                 自动切换: 开 · API Key 兜底: 关                                         |
 |   + 在速率与用量限制下配置账户切换行为。                                                       |
 |                                                                                                |
 | ↑ ↓ 移动    Enter 打开    Esc 关闭    ? 帮助                                                   |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                                         |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                    Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
