code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: open
---
 +------------------------------------------------------------------------------------------------+
 |                  Every Code  •  模型：GPT-5.2-Codex  •  推理：中  •  目录：tui                 |
 +------------------------------------------------------------------------------------------------+
 +设置 ▸ 概览-------------------------------------------------------------------------------------+
 |                                                                                                |
 | › 模型                 模型: GPT-5.2-Codex (中)                                                |
 |   + 选择新对话使用的语言模型。                                                                 |
 |                                 +---------------------------+                                  |
 |   主题                 主题: 浅色设置概览                   | Diamond                          |
 |   + 切换预设配色并调整对比度。  |                           |                                  |
 |                                 |• ↑/↓  在设置项之间移动    |                                  |
 |   更新                 自动更新:|• Enter  打开所选设置项    |                                  |
 |   + 控制 CLI 自动更新频率与发布通• Tab    在设置项之间跳转  |                                  |
 |                                 |• Esc    关闭设置          |                                  |
 |   ------------------------------|• ?      切换此帮助        |--------------------------------- |
 |                                 |                           |                                  |
 |   账户                 自动切换:|按 Esc 关闭                |                                  |
 |   + 在速率与用量限制下配置账户切+---------------------------+                                  |
 |                                                                                                |
 | ↑ ↓ 移动    Enter 打开    Esc 关闭    ? 帮助                                                   |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | 深夜我能为你写点什么？                                                                         |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                    Ctrl+S 设置   Ctrl+G 帮助  •  Tab 模式: 开发  •
